Fix text sizes on mobile - Closes #22

--- a/assets/css/lancar-notas.css
+++ b/assets/css/lancar-notas.css
@@ -22,9 +22,9 @@
     font-weight: 400;
     font-family: Roboto, sans-serif;
     font-size: 12px;
-  }
-  
-  .notification {
+}
+
+.notification {
     display: flex;
     align-items: center;
     background-color: #0DAB01;
@@ -41,27 +41,28 @@
     opacity: 0;
     transform: translateY(-100%);
     transition: opacity 0.3s ease, transform 0.3s ease;
-  }
-  
-  .notification.success {
+}
+
+.notification.success {
     background-color: #0DAB01;
-  }
-  
-  .notification svg {
+}
+
+.notification svg {
     width: 30px;
     height: 20px;
     margin-right: 1px;
-  }
+}
 
-  .notification p, svg {
+.notification p,
+svg {
     margin: 0;
     flex-direction: row;
     align-items: flex-start;
     justify-content: space-around;
     flex-wrap: wrap;
-  }
+}
 
-  button.close-button{
+button.close-button {
     display: flex;
     margin-left: auto;
     align-items: center;
@@ -75,9 +76,9 @@
     right: 0;
     width: 40px;
     height: 40px;
-  }
-  
-  
+}
+
+
 .formularioNotas {
     display: flex;
     width: 600px;
@@ -109,6 +110,7 @@
 #fotoGato {
     border-radius: 50%;
 }
+
 #data {
     font-size: 20px;
     font-weight: 700;
@@ -147,6 +149,7 @@
 .dadosGato {
     display: flex;
     align-items: center;
+    gap: 0.7em;
 }
 
 .dadosGato h1 {
@@ -262,34 +265,48 @@ span.botoes {
         width: 100%;
         align-items: center;
         justify-content: center;
+        font-size: 22px;
     }
 
     #nomeGato {
-        font-size: 24px;
+        font-size: 18px;
         width: fit-content;
-        max-width: 95px;
+        max-width: min-content;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     #botaoVoltar img {
         width: 75%;
     }
 
-    img#fotoGato,
-    #nomeGato,
-    #data {
+    img#fotoGato {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        width: fit-content;
+        width: 40px;
+        height: 40px;
         justify-content: space-between;
         padding-left: .5%;
     }
 
-    .formularioNotas h2,
-    .frase {
+    #data {
+        font-size: 12px;
+    }
+
+    .formularioNotas .frase {
         text-align: center;
         justify-content: center;
+        font-size: 14px;
     }
+
+    .formularioNotas h2 {
+        text-align: center;
+        justify-content: center;
+        font-size: 22px !important;
+    }
+
 
     div .patas {
         display: inline-block;
